--- a/minion.html
+++ b/minion.html
@@ -14,14 +14,21 @@
         <section>
             <table>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <thead>
+                    <td colspan="14"></td>
+                </thead>
+                </tr>
+                <tr>
+                    <td colspan="4"></td>
+                    <td colspan="6" class="jaune"></td>
+                    <td colspan="4"></td>
+              
+                </tr>
+                <tr>
+                    <td colspan="3"></td>
+                    <td colspan="3"></td>
+                    <td colspan="2"></td>
+                    <td colspan="1"></td>
                     <td></td>
                     <td></td>
                     <td></td>
