--- a/cubitus.html
+++ b/cubitus.html
@@ -11,40 +11,49 @@
 	<body>
 		<main>
 			<section class="groupe1">
-				<div class="form1">A</div>
-				<div class="form2">B</div>
-				<div class="form1">C</div>
-				<div class="form2">D</div>
-				<div class="form1">E</div>
-				<div class="form2">F</div>
+				<div class="form1">T</div>
+				<div class="form2">A</div>
+				<div class="form1">B</div>
+				<div class="form2">C</div>
+				<div class="form1">D</div>
+				<div class="form2">E</div>
+				<div class="clear"></div>
 
-				<div class="form2"></div>
+				<div class="form2">S</div>
 				<div class="form3"></div>
 				<div class="form4">rose</div>
 				<div class="form3">cercle</div>
 				<div class="form4"></div>
 				<div class="form1">A</div>
+				<div class="clear"></div>
 
 				<div class="form1"></div>
 				<div class="form4"></div>
 				<div class="form3"></div>
 				<div class="form5"></div>
-				<div></div>
+				<div class="espace"></div>
 				<div class="form2"></div>
+				<div class="clear"></div>
+
+
 
 				<div class="form2"></div>
 				<div class="form3"></div>
 				<div class="form4"></div>
-				<div></div>
+				<div class="espace"></div>
 				<div class="form4"></div>
 				<div class="form1"></div>
+				<div class="clear"></div>
+
 
 				<div class="form1"></div>
 				<div class="form4"></div>
-				<div></div>
+				<div class="espace"></div>
 				<div class="form4"></div>
 				<div class="form3"></div>
 				<div class="form2"></div>
+				<div class="clear"></div>
+
 
 				<div class="form2"></div>
 				<div class="form1"></div>
@@ -52,6 +61,8 @@
 				<div class="form1"></div>
 				<div class="form2"></div>
 				<div class="form1"></div>
+				<div class="clear"></div>
+
 			</section>
 		</main>
 	</body>
